@@ -50,7 +50,7 @@ namespace CIAO_Sender_Impl
   void
   Sender_exec_i::start(void)
   {
-    sleep(2);
+    ACE_OS::sleep(2);
 
     // set delaytime and rate of  a periodic TimeTrigger
     ACE_DEBUG ((LM_DEBUG, "Sender_exec_i::start start_scheduler_periodic.\n"));
